--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<meta charset="utf-8" />
-	<title>My Songbook</title>
-	<script src="index.js"></script>
-	<script src="app.js"></script>
-	<link rel="stylesheet" href="index.css" />
-    	<link rel="stylesheet" href="app.css" />
-    </head>
-    <body>
-        <h1>Hallo, Welt!</h1>
-    </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>My Songbook</title>
+<!--  <script src="index.js"></script>
+  <script src="app.js"></script> -->
+</head>
+
+<body>
+  <!-- ========================= -->
+  <!-- Grundgerüst der Anwendung -->
+  <!-- ========================= -->
+  <section id="app">
+    <!-- Topbar -->
+    <header>
+      <!-- Obere Zeile (fester Inhalt) -->
+      <div class="top left">
+        <div class="item inactive">
+          <b>
+            Beispiel einer Browser App: My Songbook
+          </b>
+        </div>
+      </div>
+      <div class="top right">
+        <div class="item">
+          <a href="https://github.com/DennisSchulmeister/dhbwka-wwi-webprog-my-songbook" target="_blank">GitHub</a>
+        </div>
+        <div class="item">
+          <a href="https://www.wpvs.de/browser-app/" target="_blank">Programmieranleitung</a>
+        </div>
+      </div>
+
+      <!-- Untere Zeile (dynamisch je nach View) -->
+      <div class="bottom left">
+        <div class="item">
+          Song hinzufügen
+        </div>
+        <div class="item">
+          Sortierung nach Titel
+        </div>
+      </div>
+      <div class="bottom right">
+        <input placeholder="Suchen" />
+      </div>
+    </header>
+
+    <!-- Hauptbereich (dynamisch je nach View) -->
+    <main>
+      <div class="padding">
+        Under Construction
+      </div>
+    </main>
+  </section>
+</body>
+
 </html>
