Following the tutorial and implementing the search function

--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,14 @@
     <header>
       <!-- Obere Zeile (fester Inhalt) -->
       <div class="top left">
-        <div class="item inactive">
+        <div class="item inactive hamburger-menu menu-closed">
           <b>
+            <span class="menu-icon">≡</span>
             Beispiel einer Browser App: My Songbook
           </b>
         </div>
       </div>
-      <div class="top right">
+      <div class="top right menu-content">
         <div class="item">
           <a href="https://github.com/DennisSchulmeister/dhbwka-wwi-webprog-my-songbook" target="_blank">GitHub</a>
         </div>
