--- a/src/song-display-edit/song-display-edit.html
+++ b/src/song-display-edit/song-display-edit.html
@@ -1,7 +1,7 @@
   <section id="song-display-edit" class="hidden">
     <!-- Topbar -->
     <header>
-      <div class="left">
+      <div class="left menu-content">
         <!-- Leer -->
       </div>
       <div class="right">
@@ -20,4 +20,3 @@
       </div>
     </main>
   </section>
-
