Adding Game Overview V2
Was in the wrong path, ... again

--- a/src/song-overview/song-overview.html
+++ b/src/song-overview/song-overview.html
@@ -7,6 +7,11 @@
             Song hinzufügen
           </a>
         </div>
+        <div class="item new-song">
+          <a href="/gameOverview/" data-navigo>
+            Zur Spiele-Übersicht
+          </a>
+        </div>
         <div class="item cmd-sort" data-sort-by="title">
           <a>
             Liste nach Titel sortieren
