--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,16 @@
         <div class="item inactive hamburger-menu menu-closed">
           <b>
             <span class="menu-icon">≡</span>
-            Beispiel einer Browser App: My Songbook
+            Spielstandzähler
           </b>
         </div>
       </div>
       <div class="top right menu-content">
         <div class="item">
-          <a href="https://github.com/DennisSchulmeister/dhbwka-wwi-webprog-my-songbook" target="_blank">GitHub</a>
+          <a>Statistik</a>
         </div>
         <div class="item">
-          <a href="https://www.wpvs.de/browser-app/" target="_blank">Programmieranleitung</a>
+          <a>Übersicht</a>
         </div>
       </div>
 
