Building the stats view and setting it up with the router, as well as writing classes for the data
The stats-view can be accessed
Each data-object has its own class

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
       </div>
       <div class="top right menu-content">
         <div class="item">
-          <a>Statistik</a>
+          <a href='/stats/' data-navigo>Statistik</a>
         </div>
         <div class="item">
-          <a>Übersicht</a>
+          <a href='/' data-navigo>Übersicht</a>
         </div>
       </div>
 
