Trying to generate mock data and first layouts for stats.html

--- a/src/stats/stats.html
+++ b/src/stats/stats.html
@@ -24,6 +24,20 @@
 
     <!-- Hauptbereich -->
     <main>
-      <table></table>
+      <table>
+        <tr>
+          <th colspan='2'> Spieler </th>
+          <th colspan='2'> game[0] </th>
+          <th colspan='2'> game[n] </th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td>Win</td>
+          <td>Lose</td>
+          <td>Win</td>
+          <td>Lose</td>
+        </tr>
+      </table>
     </main>
   </section>
