--- a/src/song-overview/song-overview.html
+++ b/src/song-overview/song-overview.html
@@ -7,6 +7,11 @@
             Song hinzufügen
           </a>
         </div>
+        <div class="item new-song">
+          <a href="/gameOverview/" data-navigo>
+            Songübersicht
+          </a>
+        </div>
         <div class="item cmd-sort" data-sort-by="title">
           <a>
             Liste nach Titel sortieren
@@ -25,5 +30,6 @@
     <!-- Hauptbereich -->
     <main>
       <ul></ul>
+      <a>hALLO</a>
     </main>
   </section>
