Removing the gameoverview folder

--- a/src/song-overview/song-overview.html
+++ b/src/song-overview/song-overview.html
@@ -3,13 +3,8 @@
     <header>
       <div class="left menu-content">
         <div class="item new-song">
-          <a href="/song/new/" data-navigo>
+          <a href="#/song/new/" data-navigo>
             Song hinzufügen
-          </a>
-        </div>
-        <div class="item new-song">
-          <a href="/gameOverview/" data-navigo>
-            Zur Spiele-Übersicht
           </a>
         </div>
         <div class="item cmd-sort" data-sort-by="title">
