Building a stats table with data from the db

--- a/src/stats/stats.html
+++ b/src/stats/stats.html
@@ -3,7 +3,7 @@
     <header>
       <div class="left menu-content">
         <div class="item new-song">
-          <a href="/song/new/" data-navigo>
+          <a href="#/song/new/" data-navigo>
             Song hinzufügen
           </a>
         </div>
