Adding a '#' to the href

--- a/src/song-display-edit/song-display-edit.html
+++ b/src/song-display-edit/song-display-edit.html
@@ -6,7 +6,7 @@
       </div>
       <div class="right">
         <div class="item overview">
-          <a href="/" data-navigo>
+          <a href="#/" data-navigo>
             Zurück zur Übersicht
           </a>
         </div>
