Adding round-overview view from lasse
Creating table with grid layout and button
Routing via router works

--- a/src/song-overview/song-overview.html
+++ b/src/song-overview/song-overview.html
@@ -3,13 +3,18 @@
     <header>
       <div class="left menu-content">
         <div class="item new-song">
-          <a href="/song/new/" data-navigo>
+          <a href="#/song/new/" data-navigo>
             Song hinzufügen
           </a>
         </div>
         <div class="item new-song">
-          <a href="/gameOverview/" data-navigo>
+          <a href="#/gameOverview/" data-navigo>
             Songübersicht
+          </a>
+        </div>
+        <div class="item new-song">
+          <a href="#/roundOverview/" data-navigo>
+            Rundenübersicht
           </a>
         </div>
         <div class="item cmd-sort" data-sort-by="title">
