--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -6,7 +6,7 @@
       </div>
       <div class="right">
         <div class="item overview">
-          <a href="/" data-navigo>
+          <a href="#/" data-navigo>
             Zurück zur Übersicht
           </a>
         </div>
