Adding game and player stats view and adding color changes and layout changes on stats view

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
         </div>
       </div>
       <div class="top right menu-content">
-        <div class="item">
-          <a href='#/stats/' data-navigo>Statistik</a>
+        <div href='#/stats/' data-navigo class="item">
+          <a >Statistik</a>
         </div>
-        <div class="item">
-          <a href='#/' data-navigo>Übersicht</a>
+        <div href='#/' data-navigo class="item">
+          <a>Übersicht</a>
         </div>
       </div>
 
