--- a/src/player-stats/player-stats.html
+++ b/src/player-stats/player-stats.html
@@ -1,4 +1,4 @@
-  <section id="stats" class="hidden">
+  <section id="player-stats" class="hidden">
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
@@ -9,7 +9,7 @@
 
     <!-- Hauptbereich -->
     <main>
-      <div class="table">
+      <div class="table">player stats
         </div>
       <!-- <table>
         <tr>
