create div content in new-game.html with table functions in new-game.js

--- a/src/new-game/new-game.html
+++ b/src/new-game/new-game.html
@@ -16,7 +16,9 @@
     <!-- Hauptbereich -->
     <main>
 
-      <div class="tSpieler" id="tabelleSpieler">
+      <div class="offeneSpiele" id="tabelleOffeneSpiele">
+
+      </div>
 
     </main>
-  </section>
+</section>
