add buttons + listeners and create dialog for new game insert mockdata for test

--- a/src/new-game/new-game.html
+++ b/src/new-game/new-game.html
@@ -16,9 +16,11 @@
     <!-- Hauptbereich -->
     <main>
 
-      <div class="offeneSpiele" id="tabelleOffeneSpiele">
+      <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
 
-      </div>
+      <button onclick="neuesSpiel" id="neuesSpiel">Neues Spiel</button>
+      <button onclick="weiterspielen" id="weiterspielen">Weiterspielen</button>
+      <button onclick="rundeBeenden" id="rundeBeenden">Runde Beenden</button>
 
     </main>
 </section>
