changed file names to game-rounds-overview

--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -1,4 +1,4 @@
-<section id="new-game" class="hidden">
+<section id="game-rounds-overview" class="hidden">
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
