--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -18,9 +18,24 @@
 
       <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
 
-      <button onclick="neuesSpiel" id="neuesSpiel">Neues Spiel</button>
-      <button onclick="weiterspielen" id="weiterspielen">Weiterspielen</button>
-      <button onclick="rundeBeenden" id="rundeBeenden">Runde Beenden</button>
+      <button id="neuesSpiel">Neues Spiel</button>
+      <button id="weiterspielen">Weiterspielen</button>
+      <button id="rundeBeenden">Runde Beenden</button>
+
+      <dialog>
+          <p>Anzahl der Spieler festlegen</p>
+          <input placeholder="Anzahl der Spieler eingeben" type="number" id="spieleranzahl"></input>
+          <br>
+          <button id="abbrechen">Abbrechen</button>
+          <button id="weiter">Weiter</button>
+      </dialog>
+
+      <dialog>
+          <h2>Spieler</h2>
+          <div id="anzahlSpieler"></div>
+          <button id="abbrechen2">Abbrechen</button>
+          <button id="neuesSpielErstellen">Neues Spiel erstellen</button>
+      </dialog>
 
     </main>
 </section>
