code review: html code via html and not js

--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -16,7 +16,7 @@
     <!-- Hauptbereich -->
     <main>
 
-      <!-- <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
+      <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
 
       <button id="neuesSpiel">Neues Spiel</button>
       <button id="weiterspielen">Weiterspielen</button>
@@ -35,7 +35,7 @@
           <div id="anzahlSpieler"></div>
           <button id="abbrechen2">Abbrechen</button>
           <button id="neuesSpielErstellen">Neues Spiel erstellen</button>
-      </dialog> -->
+      </dialog>
 
     </main>
 </section>
