Add buttons and List

--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -2,11 +2,12 @@
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
+        <p>Aktuelle Spiele - wähle aus!</p>
         <!-- Leer -->
       </div>
       <div class="right">
         <div class="item overview">
-          <a href="/" data-navigo>
+          <a href="#/" data-navigo>
             Zurück zur Übersicht
           </a>
         </div>
@@ -15,8 +16,6 @@
 
     <!-- Hauptbereich -->
     <main>
-      <div class="padding">
-        Song anzeigen/bearbeiten
-      </div>
+      <div class="lSpiel" id="listSpiel"></div>
     </main>
   </section>
