--- a/src/song-overview/song-overview.html
+++ b/src/song-overview/song-overview.html
@@ -3,12 +3,12 @@
     <header>
       <div class="left menu-content">
         <div class="item new-song">
-          <a href="/song/new/" data-navigo>
+          <a href="#/song/new/" data-navigo>
             Song hinzufügen
           </a>
         </div>
         <div class="item new-song">
-          <a href="/gameOverview/" data-navigo>
+          <a href="#/gameOverview/" data-navigo>
             Songübersicht
           </a>
         </div>
@@ -30,6 +30,5 @@
     <!-- Hauptbereich -->
     <main>
       <ul></ul>
-      <a>hALLO</a>
     </main>
   </section>
