Changes colors and background

--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -15,7 +15,14 @@
     </header>
 
     <!-- Hauptbereich -->
-    <main>
+    <main id="main">
       <div class="lSpiel" id="listSpiel"></div>
+
+      <button id="modalButton">Open Modal</button>
+
+      <div id="id01" class="modalDiv">
+              <p>Some text. Some text. Some text.</p>
+              <p>Some text. Some text. Some text.</p>
+        </div>
     </main>
   </section>
