Design und PopUp hinzugefügt

--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -18,11 +18,29 @@
     <main id="main">
       <div class="lSpiel" id="listSpiel"></div>
 
-      <button id="modalButton">Open Modal</button>
-
-      <div id="id01" class="modalDiv">
-              <p>Some text. Some text. Some text.</p>
-              <p>Some text. Some text. Some text.</p>
+      <button id="modalButton" class="buttonHover"  style="vertical-align:middle">
+        <span>
+          Open Modal
+        </span>
+      </button>
+      <div id="myModal" class="modal">
+          <!-- Modal content -->
+          <div class="modal-content">
+              <div class="modal-header1">
+                  <span id="closeModal" class="close">&times;</span>
+                  <h2>Hiiii</h2>
+                </div>
+                <div id="modalBody" class="modal-body">
+                  <p>Text 1</p>
+                  <p> Text2</p>
+                  <p>Text 1</p>
+                  <p> Text2</p>
+                  <p>Text 1</p>
+                  <p> Text2</p>
+                  <p>Text 1</p>
+                  <p> Text2</p>
+                </div>
+          </div>
         </div>
     </main>
   </section>
