further work on pop-up

--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -20,7 +20,7 @@
 
       <button id="modalButton" class="buttonHover"  style="vertical-align:middle">
         <span>
-          Open Modal
+          Neues Spiel hinzufügen
         </span>
       </button>
       <div id="myModal" class="modal">
