Adds new colorscheme to stats apperance, back button, new font color for black scheme and async switchVisibleView

--- a/src/game-stats/game-stats.html
+++ b/src/game-stats/game-stats.html
@@ -1,4 +1,4 @@
-  <section id="game-stats" class="hidden">
+  <section id="stats" class="hidden">
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
@@ -9,22 +9,9 @@
 
     <!-- Hauptbereich -->
     <main>
+      <div class='title'>
+        </div>
       <div class="table">
         </div>
-      <!-- <table>
-        <tr>
-          <th colspan='2'> Spieler </th>
-          <th colspan='2'> game[0] </th>
-          <th colspan='2'> game[n] </th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td>Win</td>
-          <td>Lose</td>
-          <td>Win</td>
-          <td>Lose</td>
-        </tr>
-      </table> -->
     </main>
   </section>
