--- a/src/stats/stats.html
+++ b/src/stats/stats.html
@@ -9,6 +9,8 @@
 
     <!-- Hauptbereich -->
     <main>
+      <div class='title'>
+        </div> 
       <div class="table">
         </div>
       <!-- <table>
