Changes color of index and app towards the new colorscheme, adds more info to stats pages

--- a/src/player-stats/player-stats.html
+++ b/src/player-stats/player-stats.html
@@ -1,4 +1,4 @@
-  <section id="stats" class="hidden">
+  <section id="player-stats" class="hidden">
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
