--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="top left">
         <div class="item inactive hamburger-menu menu-closed">
           <b>
-            <span class="menu-icon">≡</span>
+            <span class="menu-icon">&#9776;🍔</span>
             Spielstandzähler
           </b>
         </div>
