--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -28,17 +28,9 @@
           <div class="modal-content">
               <div class="modal-header1">
                   <span id="closeModal" class="close">&times;</span>
-                  <h2>Hiiii</h2>
+                  <h2 class="h2">Wähle ein neues Spiel aus</h2>
                 </div>
                 <div id="modalBody" class="modal-body">
-                  <p>Text 1</p>
-                  <p> Text2</p>
-                  <p>Text 1</p>
-                  <p> Text2</p>
-                  <p>Text 1</p>
-                  <p> Text2</p>
-                  <p>Text 1</p>
-                  <p> Text2</p>
                 </div>
           </div>
         </div>
