--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -22,20 +22,38 @@
       <button id="weiterspielen">Weiterspielen</button>
       <button id="rundeBeenden">Runde Beenden</button>
 
-      <dialog>
-          <p>Anzahl der Spieler festlegen</p>
-          <input placeholder="Anzahl der Spieler eingeben" type="number" id="spieleranzahl"></input>
-          <br>
-          <button id="abbrechen">Abbrechen</button>
-          <button id="weiter">Weiter</button>
-      </dialog>
+      <div id="myModal1" class="modal1">
+          <!-- Modal content -->
+          <div class="modal1-content">
+              <div class="modal-header1">
+                  <span id="closeModal1" class="close">&times;</span>
+                  <h2>Hiiii</h2>
+                </div>
+                <div id="modalBody" class="modal-body">
+                  <p>Anzahl der Spieler festlegen</p>
+                  <input placeholder="Anzahl der Spieler eingeben" type="number" id="spieleranzahl"></input>
+                  <br>
+                  <button id="abbrechen">Abbrechen</button>
+                  <button id="weiter">Weiter</button>
+                </div>
+          </div>
+        </div>
 
-      <dialog>
-          <h2>Spieler</h2>
-          <div id="anzahlSpieler"></div>
-          <button id="abbrechen2">Abbrechen</button>
-          <button id="neuesSpielErstellen">Neues Spiel erstellen</button>
-      </dialog>
+        <div id="myModal2" class="modal2">
+            <!-- Modal content -->
+            <div class="modal2-content">
+                <div class="modal-header1">
+                    <span id="closeModal2" class="close">&times;</span>
+                    <h2>Hiiii</h2>
+                  </div>
+                  <div id="modalBody" class="modal-body">
+                    <h2>Spieler</h2>
+                    <div id="anzahlSpieler"></div>
+                    <button id="abbrechen2">Abbrechen</button>
+                    <button id="neuesSpielErstellen">Neues Spiel erstellen</button>
+                  </div>
+            </div>
+          </div>
 
     </main>
 </section>
