used pop-up from from Karin and further work to insert backend

--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -27,10 +27,9 @@
           <div class="modal1-content">
               <div class="modal-header1">
                   <span id="closeModal1" class="close">&times;</span>
-                  <h2>Hiiii</h2>
+                  <h2>Anzahl der Spieler festlegen</h2>
                 </div>
                 <div id="modalBody" class="modal-body">
-                  <p>Anzahl der Spieler festlegen</p>
                   <input placeholder="Anzahl der Spieler eingeben" type="number" id="spieleranzahl"></input>
                   <br>
                   <button id="abbrechen">Abbrechen</button>
@@ -44,10 +43,9 @@
             <div class="modal2-content">
                 <div class="modal-header1">
                     <span id="closeModal2" class="close">&times;</span>
-                    <h2>Hiiii</h2>
+                    <h2>Spielername festlegen</h2>
                   </div>
                   <div id="modalBody" class="modal-body">
-                    <h2>Spieler</h2>
                     <div id="anzahlSpieler"></div>
                     <button id="abbrechen2">Abbrechen</button>
                     <button id="neuesSpielErstellen">Neues Spiel erstellen</button>
