Design anpassungen und Rundenanzahl hinzugefügt Please enter the commit message for your changes. Lines starting

--- a/src/player-stats/player-stats.html
+++ b/src/player-stats/player-stats.html
@@ -9,22 +9,9 @@
 
     <!-- Hauptbereich -->
     <main>
-      <div class="table">player stats
+      <div class='title'>
         </div>
-      <!-- <table>
-        <tr>
-          <th colspan='2'> Spieler </th>
-          <th colspan='2'> game[0] </th>
-          <th colspan='2'> game[n] </th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td>Win</td>
-          <td>Lose</td>
-          <td>Win</td>
-          <td>Lose</td>
-        </tr>
-      </table> -->
+      <div class="table">
+        </div>
     </main>
   </section>
