Adds sortBy buttons to all stats views

--- a/src/player-stats/player-stats.html
+++ b/src/player-stats/player-stats.html
@@ -2,6 +2,21 @@
     <!-- Topbar -->
     <header>
       <div class="left menu-content">
+        <div class="item cmd-sort" data-sort-by="playerName">
+          <a>
+            Liste nach Spielnamen sortieren
+          </a>
+        </div>
+        <div class="item cmd-sort" data-sort-by="wins">
+          <a>
+            Liste nach gewonnenen Spielen sortieren
+          </a>
+        </div>
+        <div class="item cmd-sort" data-sort-by="loses">
+          <a>
+            Liste nach verlorenen Spielen sortieren
+          </a>
+        </div>
         <div class="right">
           <input class='search' placeholder="Suchen" />
         </div>
