--- a/src/stats/stats.html
+++ b/src/stats/stats.html
@@ -4,7 +4,7 @@
       <div class="left menu-content">
         <div class="item cmd-sort" data-sort-by="playerName">
           <a>
-            Liste nach Spielern sortieren
+            Liste nach Spielernamen sortieren
           </a>
         </div>
         <div class="item cmd-sort" data-sort-by="wins">
@@ -28,20 +28,5 @@
         </div>
       <div class="table">
         </div>
-      <!-- <table>
-        <tr>
-          <th colspan='2'> Spieler </th>
-          <th colspan='2'> game[0] </th>
-          <th colspan='2'> game[n] </th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td>Win</td>
-          <td>Lose</td>
-          <td>Win</td>
-          <td>Lose</td>
-        </tr>
-      </table> -->
     </main>
   </section>
