--- a/src/round-overview/round-overview.html
+++ b/src/round-overview/round-overview.html
@@ -40,5 +40,21 @@
     </div>
       <div class="d"></div>
     </div>
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+          <div class="modal-header1">
+              <h2 id="gewinnerAnzeige" class="h2">Gewinner</h2>
+            </div>
+            <div id="modalBody" class="modal-body">
+              <button id="statistikB" class="buttonHover">
+                <span>Statistik</span>
+              </button>
+              <button id="zurueckUebersicht" class="buttonHover">
+                  <span>Zurück zur Übersicht</span>
+                </button>
+            </span>
+            </div>
+      </div>
     </main>
   </section>
