further work at game-rounds-overview.css

--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -19,9 +19,9 @@
 
       <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
 
-      <button id="neuesSpiel" class="buttons">Neues Spiel</button>
-      <button id="weiterspielen" class="buttons">Weiterspielen</button>
-      <button id="rundeBeenden" class="buttons">Runde Beenden</button>
+      <button id="neuesSpiel" class="htmlButtons">Neues Spiel</button>
+      <button id="weiterspielen" class="htmlButtons">Weiterspielen</button>
+      <button id="rundeBeenden" class="htmlButtons">Runde Beenden</button>
 
       <div id="myModal1" class="modal1">
           <!-- Modal content -->
@@ -31,10 +31,10 @@
                   <h2>Anzahl der Spieler festlegen</h2>
                 </div>
                 <div id="modalBody" class="modal-body">
-                  <input placeholder="Anzahl der Spieler eingeben" class="inputField" type="number" id="spieleranzahl"></input>
+                  <input placeholder="Anzahl der Spieler eingeben" class="inputFieldSpieleranzahl" type="number" id="spieleranzahl"></input>
                   <br>
-                  <button id="abbrechen"  class="buttons">Abbrechen</button>
-                  <button id="weiter"  class="buttons">Weiter</button>
+                  <button id="abbrechen"  class="buttonsModal1">Abbrechen</button>
+                  <button id="weiter"  class="buttonsModal1">Weiter</button>
                 </div>
           </div>
         </div>
@@ -44,12 +44,12 @@
             <div class="modal2-content">
                 <div class="modal-header1">
                     <span id="closeModal2" class="close">&times;</span>
-                    <h2>Spielername festlegen</h2>
+                    <h2>Spielernamen festlegen</h2>
                   </div>
                   <div id="modalBody" class="modal-body">
                     <div id="anzahlSpieler"></div>
-                    <button id="zurück"  class="buttons">Züruck</button>
-                    <button id="neuesSpielErstellen"  class="buttons">Neues Spiel erstellen</button>
+                    <button id="zurück"  class="buttonsModal2">Zurück</button>
+                    <button id="neuesSpielErstellen"  class="buttonsModal2">Neues Spiel erstellen</button>
                   </div>
             </div>
           </div>
