work at multiple open gameRounds

--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -19,9 +19,9 @@
 
       <div class="offeneSpiele" id="tabelleOffeneSpiele"></div>
 
-      <button id="neuesSpiel" class="htmlButtons">Neues Spiel</button>
-      <button id="weiterspielen" class="htmlButtons">Weiterspielen</button>
-      <button id="rundeBeenden" class="htmlButtons">Runde Beenden</button>
+      <button id="neuesSpiel" class="neuesSpielErstellen">Neues Spiel</button>
+      <!-- <button id="weiterspielen" class="htmlButtons">Weiterspielen</button>
+      <button id="rundeBeenden" class="htmlButtons">Runde Beenden</button> -->
 
       <div id="myModal1" class="modal1">
           <!-- Modal content -->
