--- a/src/game-rounds-overview/game-rounds-overview.html
+++ b/src/game-rounds-overview/game-rounds-overview.html
@@ -26,7 +26,7 @@
       <div id="myModal1" class="modal1">
           <!-- Modal content -->
           <div class="modal1-content">
-              <div class="modal-header1">
+              <div class="modalHeader">
                   <span id="closeModal1" class="close">&times;</span>
                   <h2>Anzahl der Spieler festlegen</h2>
                 </div>
@@ -42,7 +42,7 @@
         <div id="myModal2" class="modal2">
             <!-- Modal content -->
             <div class="modal2-content">
-                <div class="modal-header1">
+                <div class="modalHeader">
                     <span id="closeModal2" class="close">&times;</span>
                     <h2>Spielernamen festlegen</h2>
                   </div>
