scroll x für Listeneinträge

--- a/src/game-overview/game-overview.html
+++ b/src/game-overview/game-overview.html
@@ -15,9 +15,10 @@
     </header>
 
     <!-- Hauptbereich -->
-    <main id="main">
+    <main>
+        <div class="mainDiv">
       <div class="lSpiel" id="listSpiel"></div>
-
+    </div>
       <button id="modalButton" class="buttonHover"  style="vertical-align:middle">
         <span>
           Neues Spiel hinzufügen
